# picture-of-the-day

./: .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
picture_of_the_day/: api.py  config.py  logic.py  main.py  nc_handler.py
picture_of_the_day/ui/: index.html
tests/: test_00_basics.py  test_01_api.py  test_02_nc_calls.py  test_api.py
tests/configs/is_admin_initialized_true/cache/photoframe-test-data/: credits.md
tests/configs/is_admin_initialized_true/cache/pod-test-album/: credits.md
tests/configs/is_admin_initialized_true/config/: admin.json
