[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[project]
name = "picture-of-the-day"
version = "0.1.0a1"
dependencies = [
  "fastapi>=0.128.2,<1.0.0",
  "uvicorn>=0.41.0,<1.0.0",
]
requires-python = ">=3.14"
authors = [
  {name = "Michael 'Croydon' Keck", email = "git@cr0ydon.eu"},
]
maintainers = [
  {name = "Michael 'Croydon' Keck", email = "git@cr0ydon.eu"}
]
description = "REST API to get a picture of the day. This fetches photos from a Nextcloud Photos / Memories album. It let you specify to deliver a specific photo for a specific day, for unspecified days it chooses a random picture. "
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["picture", "pictures", "photoframe", "eink", "e-ink", "picture-of-the-day"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
test = [
  "nose2"
]

[project.urls]
Homepage = "hhttps://github.com/Croydon/picture-of-the-day"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/Croydon/picture-of-the-day.git"
"Bug Tracker" = "https://github.com/Croydon/picture-of-the-day/issues"
Changelog = "https://github.com/Croydon/picture-of-the-day/blob/main/changelog.md"

[project.scripts]
picture-of-the-day = "picture_of_the_day.main:main"
