[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["picture_of_the_day*"]
exclude = ["tests*", "config*"]

[project]
name = "picture-of-the-day"
version = "0.4.0a5"
dependencies = [
  "fastapi>=0.128.2,<1.0.0",
  "uvicorn>=0.41.0,<1.0.0",
  "webdavclient3>=3.14.7,<4.0.0",
  "pillow>=12.1.1,<13.0.0",
  "exifread>=3.5.1,<4.0.0"
]
requires-python = ">=3.14"
authors = [
  {name = "Michael 'Croydon' Keck", email = "git@cr0ydon.eu"}
]
maintainers = [
  {name = "Michael 'Croydon' Keck", email = "git@cr0ydon.eu"}
]
description = "REST API to get a picture of the day. This fetches photos from a Nextcloud Photos / Memories album. It let you specify to deliver a specific photo for a specific day, for unspecified days it chooses a random picture. "
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["picture", "pictures", "photoframe", "eink", "e-ink", "picture-of-the-day"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14"
]

[project.optional-dependencies]
tests = [
  "pytest>=9.0.0,<10.0.0"
]
dev = [
  "build>=1.4.0,<2.0.0",
  "fastapi[standard]>=0.128.2,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/Croydon/picture-of-the-day"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/Croydon/picture-of-the-day.git"
"Bug Tracker" = "https://github.com/Croydon/picture-of-the-day/issues"
Changelog = "https://github.com/Croydon/picture-of-the-day/blob/main/changelog.md"

[project.scripts]
picture-of-the-day = "picture_of_the_day.main:main"
